Correction methods from desire

--- a/content/acronym_definition.tex
+++ b/content/acronym_definition.tex
@@ -203,8 +203,8 @@ long= Breast Ultra-Sound
 }
 
 \DeclareAcronym{nlm}{
-  short = NL-mean,
-  long = Non-Local Mean
+  short = NL-means,
+  long = Non-Local Means
 }
 
 \DeclareAcronym{lopo}{
@@ -214,5 +214,5 @@ long= Breast Ultra-Sound
 
 \DeclareAcronym{lbptop}{
   short = LBP-TOP,
-  long =  Local Binary Pattern histogram from Three Orthogonal Planes
+  long =  LBP histogram from Three Orthogonal Planes
 }
