--- a/content/acronym_definition.tex
+++ b/content/acronym_definition.tex
@@ -220,35 +220,14 @@ long= Breast Ultra-Sound
 \DeclareAcronym{se}{
   short = SE,
   long =  Sensitivity
-Planes
 }
 
 \DeclareAcronym{sp}{
   short = SP,
   long =  Specificity
-Planes
 }
 
 \DeclareAcronym{sw}{
   short = SW,
-  long =  sliding window 
-Planes
-}
-
-\DeclareAcronym{se}{
-  short = SE,
-  long =  Sensitivity
-Planes
-}
-
-\DeclareAcronym{sp}{
-  short = SP,
-  long =  Specificity
-Planes
-}
-
-\DeclareAcronym{sw}{
-  short = SW,
-  long =  sliding window 
-Planes
+  long =  Sliding Window 
 }
