Close the method

--- a/content/acronym_definition.tex
+++ b/content/acronym_definition.tex
@@ -214,7 +214,7 @@ long= Breast Ultra-Sound
 
 \DeclareAcronym{lbptop}{
   short = LBP-TOP,
-  long =  LBP histogram from Three Orthogonal Planes
+  long =  LBP from Three Orthogonal Planes
 }
 
 \DeclareAcronym{se}{
