--- a/content/results/results.tex
+++ b/content/results/results.tex
@@ -5,61 +5,49 @@
 
 
 \begin{table}
-\caption{Obtained results with \ac{lbp}, \ac{lbp}+\ac{pca} and \ac{lbptop} features and \ac{rf} with 100 trees on SERI dataset}
+\caption{Obtained results using SERI data sets using \ac{rf} with 100 trees. High-level features with \ac{bow} are obtained with $K$ = 32 visual-words.}
 \centering
 \begin{tabular}{lcclcclcccclcclcccclcclc}
 \toprule
-Features 	& & &\multicolumn{4}{c}{\ac{lbp}}&	 & & & &\multicolumn{4}{c}{\ac{lbp}+\ac{pca}}& & & & &\multicolumn{4}{c}{\ac{lbptop}} &\\
+Features 	& & &\multicolumn{4}{c}{$8^{riu2}$}&	 & & & &\multicolumn{4}{c}{$16^{riu2}$}& & & & &\multicolumn{4}{c}{$24^{riu2}$} &\\
   \cmidrule(l){2-8}  \cmidrule(l){10-16}  \cmidrule(l){18-24}
 	       & & & SE & & & SP & & & & & SE & & & SP & & & & & SE & & & SP & \\
 \midrule
- $8^{riu2}$ 						& & & 43.75 & & & 43.75 & & & & & 50.00 & & & 68.75 & & & & & 56.25 & & & 62.50 & \\	
- $16^{riu2}$						& & & 37.50 & & & 50.00 & & & & & 68.75 & & & 56.25 & & & & & \textbf{87.50} & & & \textbf{75.00} & \\	
- $24^{riu2}$						& & & 50.00 & & & 62.50 & & & & & 56.25 & & & 37.50 & & & & & 68.75 & & & 68.75 & \\
- $\lbrace 8,16,24\rbrace^{riu2}$	& & & 37.50 & & & 56.25 & & & & & \textbf{68.75} & & & \textbf{68.75} & & & & & \textbf{81.25} & & & \textbf{81.25} & \\
+  	\ac{lbp}					& & & 43.75 & & & 43.75 & & & & & 37.50 & & & 50.00 & & & & & 50.00 & & & 62.50 & \\	
+ 	\ac{lbptop}				& & & 56.25 & & & 62.50 & & & & & \textbf{87.50} & & & \textbf{75.00} & & & & & 68.75 & & & 68.75 & \\	
+	\ac{lbp}+\ac{pca}		& & & 50.00 & & & 62.50 & & & & & 56.25 & & & 37.50 & & & & & 68.75 & & & 68.75 & \\
+	\ac{lbp}+\ac{bow}		& & & 50.00 & & & 81.25 & & & & & 57.50 & & & 68.75 & & & & & 50.00 & & & 50.00 & \\
+	\ac{lbp}+\ac{bow}+\acs{sw}		& & & 75.00 & & & 87.50 & & & & & \textbf{81.25} & & & \textbf{75.00} & & & & & 68.75 & & & 62.5 & \\
+	\ac{lbptop}+\ac{bow}+\acs{sw}		& & & 62.50 & & & 68.75 & & & & & 56.25 & & & 37.50 & & & & & 37.50 & & & 43.75 & \\
 \bottomrule
 \end{tabular}
-\label{tab:LbPTopVolumeResult}
-\end{table}
-
-
-
-\begin{table}
-\caption{Obtained results for \ac{lbp}+\ac{bow}, \ac{lbp}+\ac{bow}+\ac{sw}, and \ac{lbptop}+\ac{bow}+\ac{sw} features with $K$ = 32 and \ac{rf} with 100 trees using SERI dataset.}
-\centering
-\begin{tabular}{lcclcclcccclcclcccclcclc}
-\toprule
-Features 	& & &\multicolumn{4}{c}{\ac{lbp}+\ac{bow}}&	 & & & &\multicolumn{4}{c}{\ac{lbp}+\ac{bow}+\ac{sw}}& & & & &\multicolumn{4}{c}{\ac{lbptop}+\ac{bow}+\ac{sw}} &\\
-  \cmidrule(l){2-8}  \cmidrule(l){10-16}  \cmidrule(l){18-24}
-	       & & & SE & & & SP & & & & & SE & & & SP & & & & & SE & & & SP & \\
-\midrule
- $8^{riu2}$ 						& & & 50.00 & & & 81.25 & & & & & 75.00 & & & 87.50 & & & & & 62.50 & & & 68.75 & \\	
- $16^{riu2}$						& & & 57.50 & & & 68.75 & & & & & 81.25 & & & 75.00 & & & & & 56.25 & & & 37.50 & \\	
- $24^{riu2}$						& & & 50.00 & & & 50.00 & & & & & 68.75 & & & 62.5 & & & & & 37.50 & & & 43.75 & \\
- %$\lbrace 8,16,24\rbrace^{riu2}$	& & & 37.50 & & & 56.25 & & & & & \textbf{68.75} & & & \textbf{68.75} & & & & & \textbf{81.25} & & & \textbf{81.25} & \\
-\bottomrule
-\end{tabular}
-\label{tab:SERIBoWResult}
+\label{tab:SERI-data}
 \end{table}
 
 
 \begin{table}
-\caption{Obtained results for \ac{lbp}+\ac{bow}+\ac{sw}, and \ac{lbptop}+\ac{bow}+\ac{sw}, \ac{lbptop} features on Duke data sets. Number of \ac{rf} trees is set to 100 and $K$ = 32.}
+\caption{Obtained results using Duke data sets using \ac{rf} with 100 trees. High-level features with \ac{bow} are obtained with $K$ = 32 visual-words.}
 \centering
 \begin{tabular}{lcclcclcccclcclcccclcclc}
 \toprule
-Features 	& & &\multicolumn{4}{c}{\ac{lbp}+\ac{bow}+\ac{sw}}&	 & & & &\multicolumn{4}{c}{\ac{lbptop}+\ac{bow}+\ac{sw}} & & & & &\multicolumn{4}{c}{\ac{lbptop}} &\\
+Features 	& & &\multicolumn{4}{c}{$8^{riu2}$}&	 & & & &\multicolumn{4}{c}{$16^{riu2}$}& & & & &\multicolumn{4}{c}{$24^{riu2}$} &\\
   \cmidrule(l){2-8}  \cmidrule(l){10-16}  \cmidrule(l){18-24}
-	         & & & SE & & & SP & & & & & SE & & & SP & & & & & SE & & & SP & \\
+	       & & & SE & & & SP & & & & & SE & & & SP & & & & & SE & & & SP & \\
 \midrule
- $8^{riu2}$ 						& & & 80.00 & & & 86.67 & & & & & 80.00 & & & 86.67 & & & & & 80.00 & & & 93.33 &\\	
- $16^{riu2}$						& & & 86.67 & & & 100.00 & & & & & 86.67 & & & 86.67 & & & & & 73.33 & & & 86.67 & \\	
- $24^{riu2}$						& & & 93.33 & & & 86.67 & & & & & 60.00 & & & 80.00 & & & & & 73.33 & & & 86.67 & \\
- %$\lbrace 8,16,24\rbrace^{riu2}$	& & & 37.50 & & & 56.25 & & & & & \textbf{68.75} & & & \textbf{68.75} & & & & & \textbf{81.25} & & & \textbf{81.25} & \\
+ 	\ac{lbptop}				& & & 80.00& & & 93.33 & & & & & 73.33 & & & 86.67 & & & & & 73.33 & & & 86.67 & \\	
+	\ac{lbp}+\ac{bow}+\acs{sw}		& & & 80.00 & & & 86.67 & & & & & 86.67 & & & 100 & & & & &93.33 & & & 86.67 & \\
+	\ac{lbptop}+\ac{bow}+\acs{sw}		& & & 80.00 & & & 86.67 & & & & & 86.67 & & & 86.67 & & & & & 60.00 & & & 80.00 & \\
 \bottomrule
 \end{tabular}
-\label{tab:DukeBoWResult}
+\label{tab:Duke-data}
 \end{table}
+
+
+
+
+
+
+
 
 
 \begin{table}
