--- a/content/acronym_definition.tex
+++ b/content/acronym_definition.tex
@@ -144,7 +144,7 @@ long= Breast Ultra-Sound
 
 \DeclareAcronym{dme}{
   short = DME,
-  long  = Diabetic Macula Edema
+  long  = Diabetic Macular Edema
 }
 
 \DeclareAcronym{oct}{
