--- a/master.tex
+++ b/master.tex
@@ -20,7 +20,7 @@ Experimental results with two datasets of respectively 32 and 30 \ac{oct} volume
 
 Moreover, the experiments show that the proposed method achieves better classification performances than other recent published works.
 
-\keywords{\acl{dme}, \acl{oct}, acs{dme}, \acs{oct}, \ac{lbp}.}
+\keywords{\acl{dme}, \acl{oct}, \acs{dme}, \acs{oct}, \ac{lbp}.}
 \end{abstract}
 
 %% Incldue the content without .tex extension
